0.13.4:
    - Update wagon builder to py2py3 wagon and add rhel wagon to the release.
0.13.3:
    - port to python 3 and added release management and integration tests flows.
0.13.2:
    - Update on Terraform nodes definitions.
0.13.1:
    - Update on Terraform plugin documentation.
0.13.0:
    - Bump cloudify_common_sdk version.
0.12.0:
    - Change reload workflow parameter source default value.
0.11.0:
    - Use shared resource downloader from cloudify_common_sdk.
0.10.0:
    - Remove apply workflow and operation.
0.9:
    - Allow source ZIP file to contain all Terraform files inside a directory, allowing easy integration with GitHub,
      GitLab etc
    - Added workflow for reloading the Terraform template
0.8:
    - Modified install process to allow plugins installation in case of pre-existing terraform installation
0.7:
    - Added reload template implementation
    - Added Install/Uninstall logic for terraform
0.6:
    - Fix for backend file path
    - Added output parse for modules from state pull json