@@ -1,5 +1,10 @@
-git+https://github.com/cloudify-cosmo/cloudify-common@master#egg=cloudify-common[dispatcher]==master
 requests==2.23.0
 cloudify-utilities-plugins-sdk==0.0.21
 nose==1.3.7
 mock>=1.0
+
+# For integration tests
+git+https://github.com/cloudify-cosmo/cloudify-common@master#egg=cloudify-common[dispatcher]==master
+git+https://github.com/cloudify-cosmo/cloudify-cli@master#egg=cloudify-cli==master
+pytest==4.6.3
+pyyaml==3.12
